# Large-Scale-Empirical-Study-of-Kernel-vs-User-Space-Code

./: .gitignore  README.md  config.toml  init_sats.sh  projects_with_taxonomy.xlsx  pyproject.toml  run.sh
cwe_mapping/: cwe_mapping.py
dataset_construction/: README.md  build_dataset.py  config.py  git_operations.py  regen_metadata.py  remove_comments.py
dataset_construction/metadata/: application_metadata.json  kernel_metadata.json
dataset_construction/src/: application.json  kernel.json
experiments/: cwe_distribution_comparison.py  print_findings_tables.py  vulnerability_density_report.py
experiments/csv/: cwe_distribution_comparison.csv  cwe_distribution_comparison_significant.csv  cwe_root_distribution_comparison.csv  vulnerability_density_report.csv
experiments/txt/: tools.txt  voting.txt
static_analysis/: README.md  __init__.py  cli.py  config.py  ctags.py  docker_executor.py  models.py  pipeline.py  progress.py  report.py  synthesis.py
static_analysis/docker/: README.md
static_analysis/runners/: __init__.py  base.py  codeql.py  cppcheck.py  flawfinder.py  ikos.py  sarif.py  semgrep.py
synthesis/: application.json  kernel.json
synthesis/application/: AirSim_one_out_of_four.json  AirSim_two_out_four_no_cwe.json  AirSim_two_out_of_four.json  ClickHouse_one_out_of_four.json  ClickHouse_two_out_four_no_cwe.json  ClickHouse_two_out_of_four.json  Dummy-Robot_one_out_of_four.json  Dummy-Robot_two_out_four_no_cwe.json  Dummy-Robot_two_out_of_four.json  FFmpeg_one_out_of_four.json  FFmpeg_three_out_four_no_cwe.json  FFmpeg_three_out_of_four.json  (+187 more)
(+610 files in other folders)
